# awdio

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_presenters.py  003_add_awdios.py  004_add_speaker_notes.py  005_add_tts_provider.py  006_add_kb_images.py  007_add_presentation_images.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: audio.py  awdios.py  health.py  knowledge_bases.py  listeners.py  podcasts.py  presenters.py  router.py  voices.py
backend/app/models/: __init__.py  awdio.py  knowledge_base.py  listener.py  podcast.py  presenter.py  voice.py
backend/app/schemas/: __init__.py  awdio.py  knowledge_base.py  podcast.py  presenter.py
backend/app/services/: document_processor.py  embedding_service.py  kb_image_processor.py  narration_generator.py  script_generator.py  slide_processor.py  slide_selector.py  storage_service.py  vector_store.py
backend/app/services/rag/: __init__.py  answer_generator.py  bridge_generator.py  query_service.py
backend/app/services/tts/: __init__.py  base.py  elevenlabs_service.py  factory.py  neuphonic_service.py  synthesis_service.py  voice_manager.py
backend/app/websocket/: __init__.py  awdio_handlers.py  awdio_manager.py  connection_manager.py  handlers.py
examples/: microagents.txt
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+1 more)
(+32 files in other folders)
